working in progress

--- a/email-ted.html
+++ b/email-ted.html
@@ -15,16 +15,17 @@
 <body style="padding:0;margin:0;">
 
     <div id="header">
-        <div class="m_-9099462870854037562hse-column-container"
-            style="min-width:280px;max-width:600px;width:100%;Margin-left:auto;Margin-right:auto;border-collapse:collapse;border-spacing:0;background-color:#27272A;height:95px;display: flex;align-items:center;justify-content:center"
+        <div style="min-width:280px;max-width:600px;width:100%;Margin-left:auto;Margin-right:auto;border-collapse:collapse;border-spacing:0;background-color:#27272A;height:95px;display: flex;align-items:center;justify-content:center"
             bgcolor="#27272A">
             <table style="border-spacing:0!important;border-collapse:collapse" role="presentation" width="100%"
                 cellspacing="0" cellpadding="0">
                 <tbody>
                     <tr>
-                        <td style="height: 95px;border-collapse:collapse;font-family:Arial,sans-serif;color:#23496d;word-break:break-word;background-color:#27272A;text-align:center;padding:0px;font-size:0px"
+                        <td style="display: flex;
+                        align-items: center;
+                        justify-content: center;
+                        height: 95px;border-collapse:collapse;font-family:Arial,sans-serif;color:#23496d;word-break:break-word;background-color:#27272A;text-align:center;padding:0px;font-size:0px"
                             valign="top" align="center">
-
                             <img style="outline:none;text-decoration:none;max-width:135px;width:135px;height:37px;font-size:16px"
                                 alt="Header_Onboard_ComeçaPreencherCadastro"
                                 src="https://hml-terra-b2c-portalfiles.s3.amazonaws.com/wl-partners/logos/d6f7ab1c-828c-4393-bb94-2276a362bbc9.svg"
@@ -45,26 +46,31 @@
         </div>
     </div>
     <div id="content">
-        <div class="m_-9099462870854037562hse-column-container"
-            style="min-width:280px;max-width:600px;width:100%;Margin-left:auto;Margin-right:auto;border-collapse:collapse;border-spacing:0;background-color:#ffffff;display:flex;"
+        <div style="min-width:280px;max-width:600px;width:100%;margin-left:auto;margin-right:auto;border-collapse:collapse;border-spacing:0;background-color:#ffffff;display:flex;"
             bgcolor="#FFFFFF">
-            <div class="m_-9099462870854037562hse-column m_-9099462870854037562hse-size-12"
-                id="m_-9099462870854037562column_1605040867415_0">
+            <div>
                 <table style="border-spacing:0!important;border-collapse:collapse" role="presentation" width="100%"
                     cellspacing="0" cellpadding="0">
                     <tbody>
                         <tr>
-                            <td class="m_-9099462870854037562hs_padded"
+                            <td
                                 style="border-collapse:collapse;font-family:Arial,sans-serif;font-size:15px;color:#23496d;word-break:break-word;padding:13px 25px 0px">
                                 <div style="color:inherit;font-size:inherit;line-height:inherit"
                                     id="m_-9099462870854037562hs_cos_wrapper_module_16219595030523">
                                     <div style="color:inherit;font-size:inherit;line-height:inherit"
                                         id="m_-9099462870854037562hs_cos_wrapper_module_16219595030523_"><span
                                             class="im">
-                                            <p style="font-size:20px;line-height:100%;margin:0"><span
-                                                    style="font-family:Montserrat,sans-serif;color:#444444"><span
-                                                        style="font-size:16px"><span
-                                                            style="color:#666666">Olá!</span></span></span></p>
+                                            <p
+                                                style="font-size:14px;line-height:100%;margin:0;font-family:Verdana, Geneva, Tahoma, sans-serif,sans-serif;color:#444444;font-weight:700;">
+                                                Olá Tais!
+                                            </p>
+                                            <span style="
+                                            display: inline-flex;
+                                            width: 276px;
+                                            height: 4px;
+                                            background-color: #3F3F46;
+                                            margin: 16px 0px;
+                                            "></span>
                                             <p style="font-size:20px;line-height:100%;margin:0">&nbsp;</p>
                                             <p style="font-size:20px;line-height:100%;margin:0"><span
                                                     style="font-family:Montserrat,sans-serif;color:#444444"><span
@@ -100,12 +106,12 @@
                         </tr>
                     </tbody>
                 </table>
+
             </div>
         </div>
     </div>
     <div id="warning-disclaimer">
-        <div class="m_-9099462870854037562hse-column-container"
-            style="min-width:280px;max-width:600px;width:100%;Margin-left:auto;Margin-right:auto;border-collapse:collapse;border-spacing:0;background-color:#ffffff;display:flex;"
+        <div style="min-width:280px;max-width:600px;width:100%;Margin-left:auto;Margin-right:auto;border-collapse:collapse;border-spacing:0;background-color:#ffffff;display:flex;"
             bgcolor="#FFFFFF">
             <div class="m_-9099462870854037562hse-column m_-9099462870854037562hse-size-12"
                 id="m_-9099462870854037562column_1605040867415_0">
@@ -130,8 +136,8 @@
                     margin-top: 21px;
                     ">
                                 <span
-                                    style="display:inline-flex;align-items:center;justify-content:center;width:20px;height:20px;background-color:#2aa81a;color:#FFFFFF;border-radius: 50%;">
-                                    <i class="fa-regular fa-triangle-exclamation"></i>
+                                    style="display:inline-flex;align-items:center;justify-content:center;width:20px;height:20px;color:#FFFFFF;border-radius: 50%;">
+                                    <i class="fa-brands triangle"></i>
                                 </span>
                                 Caso você não reconheça essa solicitação, entre em contato conosco
                                 em um de nossos Canais de Atendimento o quanto antes.
