--- a/email-ted.html
+++ b/email-ted.html
@@ -15,7 +15,7 @@
 <body style="padding:0;margin:0;">
 
     <div id="header">
-        <div style="min-width:280px;max-width:600px;width:100%;Margin-left:auto;Margin-right:auto;border-collapse:collapse;border-spacing:0;background-color:#27272A;height:95px;display: flex;align-items:center;justify-content:center"
+        <div style="min-width:280px;max-width:600px;width:100%;margin-left:auto;margin-right:auto;border-collapse:collapse;border-spacing:0;background-color:#27272A;height:95px;display: flex;align-items:center;justify-content:center"
             bgcolor="#27272A">
             <table style="border-spacing:0!important;border-collapse:collapse" role="presentation" width="100%"
                 cellspacing="0" cellpadding="0">
@@ -27,18 +27,9 @@
                         height: 95px;border-collapse:collapse;font-family:Arial,sans-serif;color:#23496d;word-break:break-word;background-color:#27272A;text-align:center;padding:0px;font-size:0px"
                             valign="top" align="center">
                             <img style="outline:none;text-decoration:none;max-width:135px;width:135px;height:37px;font-size:16px"
-                                alt="Header_Onboard_ComeçaPreencherCadastro"
+                                alt="Logo do Parceiro"
                                 src="https://hml-terra-b2c-portalfiles.s3.amazonaws.com/wl-partners/logos/d6f7ab1c-828c-4393-bb94-2276a362bbc9.svg"
                                 class="CToWUd a6T" tabindex="0" width="600" align="middle">
-                            <div class="a6S" dir="ltr" style="opacity: 0.01; left: 614px; top: 186px;">
-                                <div id=":ui" class="T-I J-J5-Ji aQv T-I-ax7 L3 a5q" role="button" tabindex="0"
-                                    aria-label="Fazer o download do anexo " data-tooltip-class="a1V"
-                                    data-tooltip="Fazer o download">
-                                    <div class="akn">
-                                        <div class="aSK J-J5-Ji aYr"></div>
-                                    </div>
-                                </div>
-                            </div>
                         </td>
                     </tr>
                 </tbody>
@@ -46,95 +37,85 @@
         </div>
     </div>
     <div id="content">
-        <div style="min-width:280px;max-width:600px;width:100%;margin-left:auto;margin-right:auto;border-collapse:collapse;border-spacing:0;background-color:#ffffff;display:flex;"
+        <div style="
+            min-width:280px;
+            max-width:600px;width:100%;margin-left:auto;margin-right:auto;border-collapse:collapse;border-spacing:0;background-color:#ffffff;display:flex;"
             bgcolor="#FFFFFF">
-            <div>
-                <table style="border-spacing:0!important;border-collapse:collapse" role="presentation" width="100%"
-                    cellspacing="0" cellpadding="0">
-                    <tbody>
-                        <tr>
-                            <td
-                                style="border-collapse:collapse;font-family:Arial,sans-serif;font-size:15px;color:#23496d;word-break:break-word;padding:13px 25px 0px">
+            <div <table style="border-spacing:0!important;border-collapse:collapse" role="presentation" width="100%"
+                cellspacing="0" cellpadding="0">
+                <tbody>
+                    <tr>
+                        <td
+                            style="border-collapse:collapse;font-family:Arial,sans-serif;font-size:15px;color:#23496d;word-break:break-word;padding:13px 25px 0px">
+                            <div style="color:inherit;font-size:inherit;line-height:inherit"
+                                id="m_-9099462870854037562hs_cos_wrapper_module_16219595030523">
                                 <div style="color:inherit;font-size:inherit;line-height:inherit"
-                                    id="m_-9099462870854037562hs_cos_wrapper_module_16219595030523">
-                                    <div style="color:inherit;font-size:inherit;line-height:inherit"
-                                        id="m_-9099462870854037562hs_cos_wrapper_module_16219595030523_"><span
-                                            class="im">
-                                            <p
-                                                style="font-size:14px;line-height:100%;margin:0;font-family:Verdana, Geneva, Tahoma, sans-serif,sans-serif;color:#444444;font-weight:700;">
-                                                Olá Tais!
-                                            </p>
-                                            <span style="
+                                    id="m_-9099462870854037562hs_cos_wrapper_module_16219595030523_"><span class="im">
+                                        <p
+                                            style="font-size:14px;line-height:100%;margin:0;font-family:Verdana, Geneva, Tahoma, sans-serif,sans-serif;color:#444444;font-weight:700;">
+                                            Olá Tais!
+                                        </p>
+                                        <span style="
                                             display: inline-flex;
                                             width: 276px;
                                             height: 4px;
                                             background-color: #3F3F46;
                                             margin: 16px 0px;
                                             "></span>
-                                            <p style="font-size:20px;line-height:100%;margin:0">&nbsp;</p>
-                                            <p style="font-size:20px;line-height:100%;margin:0"><span
-                                                    style="font-family:Montserrat,sans-serif;color:#444444"><span
-                                                        style="font-size:16px"><span style="color:#666666">Segue
-                                                            abaixo
-                                                            o código para realizar a autenticação do seu cadastro:
-                                                        </span></span></span></p>
-                                            <p style="font-size:20px;line-height:100%;margin:0">&nbsp;</p>
-                                        </span><strong>842865</strong><span class="im">
-                                            <p style="margin:0"></p>
-                                            <p style="font-size:20px;line-height:100%;margin:0">&nbsp;</p>
-                                            <p style="font-size:20px;line-height:100%;margin:0"><span
-                                                    style="font-family:Montserrat,sans-serif;color:#444444"><span
-                                                        style="font-size:16px"><span style="color:#666666">Caso
-                                                            tenha
-                                                            dúvidas, é só entrar em contato com a gente por nossos
-                                                            canais de atendimento. </span></span></span></p>
-                                            <p style="font-size:20px;line-height:100%;margin:0">&nbsp;</p>
-                                            <p style="font-size:20px;line-height:100%;margin:0"><span
-                                                    style="font-family:Montserrat,sans-serif;color:#444444"><span
-                                                        style="font-size:16px"><span style="color:#666666">Conte
-                                                            sempre
-                                                            conosco!</span></span></span></p>
-                                            <p style="font-size:20px;line-height:100%;margin:0">&nbsp;</p>
-                                            <p style="font-size:20px;line-height:100%;font-weight:bold;margin:0">
-                                                <span style="font-family:Montserrat,sans-serif;color:#27272A"><span
-                                                        style="font-size:16px">#VamosJuntos</span></span>
-                                            </p>
-                                            <p style="font-size:20px;line-height:100%;margin:0">&nbsp;</p>
-                                        </span></div>
-                                </div>
-                            </td>
-                        </tr>
-                    </tbody>
+                                        <p style="font-size:20px;line-height:100%;margin:0">&nbsp;</p>
+                                        <p style="font-size:20px;line-height:100%;margin:0"><span
+                                                style="font-family:Montserrat,sans-serif;color:#444444"><span
+                                                    style="font-size:16px"><span style="color:#666666">Segue
+                                                        abaixo
+                                                        o código para realizar a autenticação do seu cadastro:
+                                                    </span></span></span></p>
+                                        <p style="font-size:20px;line-height:100%;margin:0">&nbsp;</p>
+                                    </span><strong>842865</strong><span class="im">
+                                        <p style="margin:0"></p>
+                                        <p style="font-size:20px;line-height:100%;margin:0">&nbsp;</p>
+                                        <p style="font-size:20px;line-height:100%;margin:0"><span
+                                                style="font-family:Montserrat,sans-serif;color:#444444"><span
+                                                    style="font-size:16px"><span style="color:#666666">Caso
+                                                        tenha
+                                                        dúvidas, é só entrar em contato com a gente por nossos
+                                                        canais de atendimento. </span></span></span></p>
+                                        <p style="font-size:20px;line-height:100%;margin:0">&nbsp;</p>
+                                        <p style="font-size:20px;line-height:100%;margin:0"><span
+                                                style="font-family:Montserrat,sans-serif;color:#444444"><span
+                                                    style="font-size:16px"><span style="color:#666666">Conte
+                                                        sempre
+                                                        conosco!</span></span></span></p>
+                                        <p style="font-size:20px;line-height:100%;margin:0">&nbsp;</p>
+                                        <p style="font-size:20px;line-height:100%;font-weight:bold;margin:0">
+                                            <span style="font-family:Montserrat,sans-serif;color:#27272A"><span
+                                                    style="font-size:16px">#VamosJuntos</span></span>
+                                        </p>
+                                        <p style="font-size:20px;line-height:100%;margin:0">&nbsp;</p>
+                                    </span></div>
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
                 </table>
-
-            </div>
-        </div>
-    </div>
-    <div id="warning-disclaimer">
-        <div style="min-width:280px;max-width:600px;width:100%;Margin-left:auto;Margin-right:auto;border-collapse:collapse;border-spacing:0;background-color:#ffffff;display:flex;"
-            bgcolor="#FFFFFF">
-            <div class="m_-9099462870854037562hse-column m_-9099462870854037562hse-size-12"
-                id="m_-9099462870854037562column_1605040867415_0">
                 <table style="border-spacing:0!important;border-collapse:collapse" role="presentation" width="100%"
                     cellspacing="0" cellpadding="0">
                     <tbody>
                         <tr>
-                            <td class="m_-9099462870854037562hs_padded" style="
-                    max-width: 600px;
-                    border-collapse:collapse;
-                    text-align:center;
-                    font-family: Verdana, Geneva, Tahoma, sans-serif,sans-serif;
-                    font-size: 12px;
-                    line-height: 20px;
-                    font-weight: 400;
-                    font-style: normal;
-                    color:#3F3F46;
-                    background-color: #FAED97;
-                    border:transparent;
-                    padding: 16px 90px;
-                    margin-bottom: 21px;
-                    margin-top: 21px;
-                    ">
+                            <td style="max-width: 600px;
+                border-collapse:collapse;
+                text-align:center;
+                font-family: Verdana, Geneva, Tahoma, sans-serif,sans-serif;
+                font-size: 12px;
+                line-height: 20px;
+                font-weight: 400;
+                font-style: normal;
+                color:#3F3F46;
+                background-color: #FAED97;
+                border:transparent;
+                padding: 16px 90px;
+                margin-bottom: 21px;
+                margin-top: 21px;
+                ">
                                 <span
                                     style="display:inline-flex;align-items:center;justify-content:center;width:20px;height:20px;color:#FFFFFF;border-radius: 50%;">
                                     <i class="fa-brands triangle"></i>
@@ -148,6 +129,7 @@
             </div>
         </div>
     </div>
+
     <div id="contacts-disclaimer">
         <div style="background-color:#EEEEEE;max-width:600px; min-width:280px;
         max-width:600px;
@@ -165,7 +147,7 @@
                     cellspacing="0" cellpadding="0">
                     <tbody>
                         <tr>
-                            <td class="m_-9099462870854037562hs_padded"
+                            <td
                                 style="border-collapse:collapse;font-family:Arial,sans-serif;font-size:15px;color:#23496d;word-break:break-word;padding:10px 24px;display:inline-block; align-items: center; justify-content:center;">
                                 <div style="color:inherit;font-size:inherit;line-height:inherit; display:flex"
                                     id="m_-9099462870854037562hs_cos_wrapper_module_16294057632502">
@@ -209,7 +191,7 @@
                     cellspacing="0" cellpadding="0">
                     <tbody>
                         <tr>
-                            <td class="m_-9099462870854037562hs_padded"
+                            <td
                                 style="border-collapse:collapse;font-family:Arial,sans-serif;font-size:15px;color:#23496d;word-break:break-word;padding:10px 0px;display:flex; align-items: center; justify-content:center;">
                                 <div style="color:inherit;font-size:inherit;line-height:inherit"
                                     id="m_-9099462870854037562hs_cos_wrapper_module_16294057791383">
@@ -236,7 +218,7 @@
                     </tbody>
                 </table>
             </div>
-            <div style="min-width:280px;max-width:600px;width:100%;Margin-left:auto;Margin-right:auto;border-collapse:collapse;border-spacing:0; display: flex; align-items:center;justify-content:center"
+            <div style="min-width:280px;max-width:600px;width:100%;margin-left:auto;margin-right:auto;border-collapse:collapse;border-spacing:0; display: flex; align-items:center;justify-content:center"
                 bgcolor="#ffffff">
                 <div class="m_-9099462870854037562hse-column m_-9099462870854037562hse-size-12"
                     id="m_-9099462870854037562column_1602088296538_0">
@@ -244,7 +226,7 @@
                         role="presentation" width="100%" cellspacing="0" cellpadding="0">
                         <tbody>
                             <tr>
-                                <td class="m_-9099462870854037562hs_padded"
+                                <td
                                     style="border-collapse:collapse;font-family:Arial,sans-serif;font-size:15px;color:#23496d;word-break:break-word;padding:10px 24px">
                                     <div style="color:inherit;font-size:inherit;line-height:inherit"
                                         id="m_-9099462870854037562hs_cos_wrapper_module_16294057515351">
@@ -293,7 +275,7 @@
                     </table>
                 </div>
             </div>
-            <div style="min-width:280px;max-width:600px;width:100%;Margin-left:auto;Margin-right:auto;border-collapse:collapse;border-spacing:0; display: flex; align-items:center;justify-content:flex-start"
+            <div style="min-width:280px;max-width:600px;width:100%;margin-left:auto;margin-right:auto;border-collapse:collapse;border-spacing:0; display: flex; align-items:center;justify-content:flex-start"
                 bgcolor="#ffffff">
                 <div class="m_-9099462870854037562hse-column m_-9099462870854037562hse-size-12"
                     id="m_-9099462870854037562column_1602088296538_0">
@@ -301,7 +283,7 @@
                         role="presentation" width="100%" cellspacing="0" cellpadding="0">
                         <tbody>
                             <tr>
-                                <td class="m_-9099462870854037562hs_padded"
+                                <td
                                     style="border-collapse:collapse;font-family:Arial,sans-serif;font-size:15px;color:#23496d;word-break:break-word;padding:10px 24px">
                                     <div style="color:inherit;font-size:inherit;line-height:inherit"
                                         id="m_-9099462870854037562hs_cos_wrapper_module_16294057515351">
