--- a/email-ted.html
+++ b/email-ted.html
@@ -50,22 +50,13 @@
                             <p style="margin: 27px 0px 0px 37px;font-size:14px;color:#666666;font-weight:700;">
                                 Olá Tais!
                             </p>
-                            <span style="
-                                            display: inline-flex;
-                                            width: 276px;
-                                            height: 4px;
-                                            background-color: #3F3F46;
-                                            margin: 16px 0px;
-                                            ">
-                                <p style="font-family: 'Verdana';
-                                font-style: normal;
-                                font-weight: 700;
-                                font-size: 14px;
+                            <span
+                                style="display: inline-flex;width: 276px;border-radius:4px;height: 4px;background-color: #3F3F46;margin: 16px 0px;"></span>
+                            <span>
+                                <p style="font-family:'Verdana';font-style: normal;font-weight: 700;font-size: 14px;
                                 line-height: 20px;                                
                                 text-align: center;                            
-                                color: #3F3F46;">Realizamos uma transferência na sua
-                                    conta</p>
-                                <p style="font-size:20px;line-height:100%;margin:0">&nbsp;</p>
+                                color: #3F3F46;">Realizamos uma transferência na sua conta</p>
                             </span>
                         </td>
                     </tr>
