--- a/email-ted.html
+++ b/email-ted.html
@@ -13,7 +13,6 @@
 </head>
 
 <body style="padding:0;margin:0;font-family:Verdana, Geneva, Tahoma, sans-serif,sans-serif">
-
     <div id="header">
         <div style="min-width:280px;max-width:600px;width:100%;margin-left:auto;margin-right:auto;border-collapse:collapse;border-spacing:0;background-color:#27272A;height:95px;display: flex;align-items:center;justify-content:center"
             bgcolor="#27272A">
@@ -28,8 +27,8 @@
                             valign="top" align="center">
                             <img style="outline:none;text-decoration:none;max-width:135px;width:135px;height:37px;font-size:16px"
                                 alt="Logo do Parceiro"
-                                src="https://hml-terra-b2c-portalfiles.s3.amazonaws.com/wl-partners/logos/d6f7ab1c-828c-4393-bb94-2276a362bbc9.svg"
-                                class="CToWUd a6T" tabindex="0" width="600" align="middle">
+                                src=""
+                                width="600">
                         </td>
                     </tr>
                 </tbody>
@@ -37,26 +36,32 @@
         </div>
     </div>
     <div id="content">
-        <div style="flex-direction: column;
-        
-            min-width:280px;
-            max-width:600px;width:100%;margin-left:auto;margin-right:auto;border-collapse:collapse;border-spacing:0;background-color:#ffffff;display:flex;"
+        <div style="padding: 27px 0px;flex-direction: column;min-width:280px;max-width:600px;width:100%;margin-left:auto;margin-right:auto;border-collapse:collapse;border-spacing:0;background-color:red;display:flex;"
             bgcolor="#FFFFFF">
             <table style="border-spacing:0!important;border-collapse:collapse" role="presentation" width="100%"
                 cellspacing="0" cellpadding="0">
                 <tbody>
                     <tr>
                         <td style="border-collapse:collapse;font-size:15px;color:#23496d;word-break:break-word;">
-                            <p style="margin: 27px 0px 0px 37px;font-size:14px;color:#666666;font-weight:700;">
+                            <p style="margin:0px;margin-left:37px;font-size:14px;color:#666666;font-weight:700;">
                                 Olá Tais!
                             </p>
                             <span
                                 style="display: inline-flex;width: 276px;border-radius:4px;height: 4px;background-color: #3F3F46;margin: 16px 0px;"></span>
                             <span>
-                                <p style="font-family:'Verdana';font-style: normal;font-weight: 700;font-size: 14px;
-                                line-height: 20px;                                
+                                <p style="
+                                font-family:'Verdana';
+                                font-style: normal;
+                                font-size: 14px;
                                 text-align: center;                            
-                                color: #3F3F46;">Realizamos uma transferência na sua conta</p>
+                                font-weight: 700;
+                                line-height: 20px;                                
+                                color: #3F3F46;">Realizamos uma transferência na sua conta
+                                </p>
+                            </span>
+                            <span
+                                style="width:100%;display:inline-flex;align-items:center;justify-content:center;margin: 27px 0px;">
+                                <img style="max-width:112px;max-height:112px;" src="" alt="Icone de transferência" />
                             </span>
                         </td>
                     </tr>
@@ -93,7 +98,6 @@
         </div>
     </div>
     </div>
-
     <div id="contacts-disclaimer">
         <div style="background-color:#EEEEEE;max-width:600px; min-width:280px;
         max-width:600px;
