refactoring in progress

--- a/email-ted.html
+++ b/email-ted.html
@@ -10,34 +10,60 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <style>
+        .header {
+            min-width: 280px;
+            max-width: 600px;
+            width: 100%;
+            margin-left: auto;
+            margin-right: auto;
+            border-collapse: collapse;
+            border-spacing: 0;
+            background-color: #27272A;
+            height: 95px;
+            display: flex;
+            align-items: center;
+            justify-content: cente
+        }
+
+        .content {
+            padding: 27px 0px;
+            flex-direction: column;
+            min-width: 280px;
+            max-width: 600px;
+            width: 100%;
+            margin-left: auto;
+            margin-right: auto;
+            border-collapse: collapse;
+            border-spacing: 0;
+            background-color: red;
+            display: flex;
+        }
+    </style>
 </head>
 
 <body style="padding:0;margin:0;font-family:Verdana, Geneva, Tahoma, sans-serif,sans-serif">
     <div id="header">
-        <div style="min-width:280px;max-width:600px;width:100%;margin-left:auto;margin-right:auto;border-collapse:collapse;border-spacing:0;background-color:#27272A;height:95px;display: flex;align-items:center;justify-content:center"
-            bgcolor="#27272A">
-            <table style="border-spacing:0!important;border-collapse:collapse" role="presentation" width="100%"
-                cellspacing="0" cellpadding="0">
-                <tbody>
-                    <tr>
-                        <td style="display: flex;
+
+        <table style="border-spacing:0!important;border-collapse:collapse" role="presentation" width="100%"
+            cellspacing="0" cellpadding="0">
+            <tbody>
+                <tr>
+                    <td style="display: flex;
                         align-items: center;
                         justify-content: center;
                         height: 95px;border-collapse:collapse;color:#23496d;word-break:break-word;background-color:#27272A;text-align:center;padding:0px;font-size:0px"
-                            valign="top" align="center">
-                            <img style="outline:none;text-decoration:none;max-width:135px;width:135px;height:37px;font-size:16px"
-                                alt="Logo do Parceiro"
-                                src=""
-                                width="600">
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+                        valign="top" align="center">
+                        <img style="outline:none;text-decoration:none;max-width:135px;width:135px;height:37px;font-size:16px"
+                            alt="Logo do Parceiro" src="" width="600">
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
     <div id="content">
-        <div style="padding: 27px 0px;flex-direction: column;min-width:280px;max-width:600px;width:100%;margin-left:auto;margin-right:auto;border-collapse:collapse;border-spacing:0;background-color:red;display:flex;"
-            bgcolor="#FFFFFF">
+        <div bgcolor="#FFFFFF">
             <table style="border-spacing:0!important;border-collapse:collapse" role="presentation" width="100%"
                 cellspacing="0" cellpadding="0">
                 <tbody>
@@ -96,7 +122,6 @@
                 </tbody>
             </table>
         </div>
-    </div>
     </div>
     <div id="contacts-disclaimer">
         <div style="background-color:#EEEEEE;max-width:600px; min-width:280px;
