--- a/email-ted.html
+++ b/email-ted.html
@@ -347,7 +347,7 @@
                             <span class="content__infos__line__left"></span>
                         </div>
                         <span>
-                            <p class="content__infos_title_description">Realizamos uma transferência na sua conta</p>
+                            <p class="content__infos_title_description">{{ info_title_description }}</p>
                         </span>
                         <span class="content__infos__icon__wrapper">
                             <img class="content__infos__icon" src={{ content_icon }} srcset{{ content_icon }}
