adding padding between elements to banking table

--- a/email-ted.html
+++ b/email-ted.html
@@ -78,6 +78,7 @@
             font-size: 12px;
             line-height: 18px;
             color: #3F3F46;
+            padding-right: 100px;
         }
 
         .content--infos .content__infos__banking .content__infos__banking__value {
